# lots-of-langs

./: .gitignore  README.md
.metals/: metals.mv.db
.scala-build/.bloop/: lots-of-langs_bd2c96d2de-test.json  lots-of-langs_bd2c96d2de.json
advent-of-code-2022/10/rust-advent-of-code-10/: Cargo.toml
advent-of-code-2022/11/rust-advent-of-code-11/: Cargo.toml
advent-of-code-2022/12/rust-advent-of-code-12/: 2  Cargo.toml
advent-of-code-2022/13/rust-advent-of-code-13/: Cargo.toml
hello-world/: README.md
hello-world/c-hello-world/: index.c
hello-world/crystal-hello-world/: LICENSE  README.md  shard.yml
hello-world/csharp-hello-world/: Program.cs
hello-world/fsharp-hello-world/: Program.fs  fsharp-hello-world.fsproj
hello-world/go-hello-world/: hello-world.go
hello-world/haskell-hello-world/: haskell-hello-world.cabal
hello-world/java-hello-world/: HelloWorld.java
hello-world/kotlin-hello-world/: hello-world.kt
hello-world/ocaml_hello_world/: dune-project
hello-world/python-hello-world/: __main__.py
hello-world/ruby-hello-world/: index.rb
hello-world/scala-hello-world/: HelloWorldScala.scala  HelloWorldScala.tasty
hello-world/swift_hello_world/: index.swift
hello-world/typescript-hello-world/: index.ts  package-lock.json  package.json
hello-world/zig-hello-world/: build.zig
parrot-http-server/: README.md
parrot-http-server/rust-actix-parrot-http-server/: Cargo.toml
todo-app/: README.md
todo-app/rust-actix-sqlite-todo-app/: Cargo.toml  README.md
todo-app/rust-actix-sqlite-todo-app/src/: main.rs
(+46 files in other folders)
