[package]
name = "rust-actix-sqlite-todo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
maud = { version = "*", features = ["actix-web"] }
env_logger = "*"
derive_more = "0.99.17"
serde = { version = "1.0", features = ["derive"] }
